# livelybot_hardware_sdk

./: arm_gravity_comp.sh  arm_joint_survey.sh  arm_motor_sign_test.sh  arm_sysid_trajectory.sh  arm_task_space_impedance.sh  arm_traj_following.sh  hi_arm_activated.urdf  hi_identified.urdf  hi_identified_with_FT.urdf  hi_identified_with_friction.urdf
src/livelybot_bringup/: CMakeLists.txt
src/livelybot_bringup/launch/: arm_gravity_comp.launch  arm_joint_survey.launch  arm_motor_sign_test.launch  arm_sysid_trajectory.launch  arm_task_space_impedance.launch  arm_traj_following.launch
src/livelybot_bringup/src/: arm_gravity_comp.cpp  arm_joint_survey.cpp  arm_motor_sign_test.cpp  arm_sysid_trajectory.cpp  arm_task_space_impedance.cpp  arm_traj_following.cpp
src/livelybot_description/launch/: livelybot_description.launch
src/sysid_hitorque/: README.md  generate_identified_urdf.py  plot_sysid_traj.py  solve_sysid.py
src/sysid_hitorque/bounding_ellipsoids/: bounding_ellipsoids.py  ellipsoids.npz
src/sysid_hitorque/identified_results/: identified_params.npz
src/sysid_hitorque/optimize_sysid_trajectory/: optimal_fourier_coeffs.npz  optimize_trajectory.py
